# Radar-Licitaciones-MX

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  query_db.ts  railway.toml
.github/workflows/: ci.yml
apps/rsmx/: .env.example  Procfile  README.md  audit_fase_1_5.md  audit_supabase_real.md  audit_telegram_real.md  pr_review_notes.md  pyproject.toml  railway_deploy_checklist.md  requirements.txt  walkthrough.md
apps/rsmx/app/: __init__.py  config.py  database.py  main.py
apps/rsmx/app/api/: __init__.py  routes.py
apps/rsmx/app/bot/: __init__.py  commands.py  telegram.py
apps/rsmx/app/collectors/: __init__.py  gdelt.py  official.py  rss.py
apps/rsmx/app/models/: __init__.py  schemas.py
apps/rsmx/app/processing/: __init__.py  classifier.py  deduplicator.py  normalizer.py  scoring.py  text.py
apps/rsmx/app/services/: __init__.py  alert_engine.py  event_store.py
apps/rsmx/app/workers/: __init__.py  monitor.py
apps/rsmx/scripts/: get_telegram_chat_id.py  run_worker.py  test_telegram_send.py
apps/rsmx/sql/: 002_seed_sources.sql
apps/rsmx/tests/: test_processing.py  test_telegram.py
apps/web/: package-lock.json  package.json
apps/worker/: .env.example  Dockerfile  eslint.config.js  (+5 more)
docs/: architecture.md  data-model.md  env-vars.md  fase3-ai-architecture-plan.md  historico-capufe.md  radars.md  roadmap.md  scheduler.md  supabase-schema.sql  telegram-alerts.md
scraper-maestros/: get_tables.ts  package-lock.json  package.json  pnt_home.html  pnt_page.html  query.ts  test_pnt.ts  test_puppeteer.ts  test_siged.ts
scripts/: test_download.ts
(+355 files in other folders)
