[project]
name = "rsmx"
version = "0.1.0"
description = "Radar-Social-MX isolated OSINT/SOCMINT public alerting service"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
